chores: fix conflicts and refactor failed tests after merge -- closes #1, #4, #5, #7, #8, #9, #10