@@ -1,6 +1,6 @@
 package br.ifsp.demo.service;
 
-import br.ifsp.demo.model.Course;
+import br.ifsp.demo.domain.Course;
 import br.ifsp.demo.repository.CourseRepository;
 import org.junit.jupiter.api.*;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -14,10 +14,9 @@ import org.springframework.boot.test.context.SpringBootTest;
 import java.util.List;
 import java.util.stream.Stream;
 
-import static org.assertj.core.api.Assertions.*;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 
 class CourseQueryServiceTest {
 
@@ -28,17 +27,18 @@ class CourseQueryServiceTest {
 
     static Stream<Arguments> courseFilterProvider() {
 
-        Course course1 = new Course("ADS101", "Programação I", "08:00-10:00", 4, List.of(), 40);
+        Course course1 = new Course("ADS101", "Programação I", 4, List.of(), 40);
         course1.setName("ADS");
         course1.setShift("Noturno");
 
-        Course course2 = new Course("ADS201", "Engenharia de Software", "14:00-16:00", 4, List.of(), 35);
+        Course course2 = new Course("ADS201", "Engenharia de Software", 4, List.of(), 35);
         course2.setName("ADS");
         course2.setShift("Noturno");
 
         return Stream.of(
                 Arguments.of(List.of(course1)),
-                Arguments.of(List.of(course1, course2)));
+                Arguments.of(List.of(course1, course2))
+        );
     }
 
     @BeforeEach
@@ -47,26 +47,26 @@ class CourseQueryServiceTest {
         service = new CourseQueryService(repository);
     }
 
+    @Test
     @Tag("TDD")
     @Tag("UnitTest")
-    @Test
     @DisplayName("Should Return All Offered Courses For The Semester")
     void shouldReturnAllOfferedCoursesForTheSemester() {
-        Course course1 = new Course("ADS101", "Programação I", "08:00-10:00", 4, List.of(), 40);
-        Course course2 = new Course("ADS201", "Engenharia de Software", "14:00-16:00", 4, List.of(), 35);
+        Course course1 = new Course("ADS101", "Programação I", 4, List.of(), 40);
+        Course course2 = new Course("ADS201", "Engenharia de Software", 4, List.of(), 35);
 
         when(repository.findCourses()).thenReturn(List.of(course1, course2));
 
         List<Course> result = service.getCourses();
 
         assertEquals(2, result.size());
-        assertEquals("ADS101", result.getFirst().getCode());
+        assertEquals("ADS101", result.get(0).getCode());
         verify(repository).findCourses();
     }
 
+    @Test
     @Tag("TDD")
     @Tag("UnitTest")
-    @Test
     @DisplayName("Should Return Empty List When No Courses Offered")
     void shouldReturnEmptyListWhenNoCoursesOffered() {
         when(repository.findCourses()).thenReturn(List.of());
@@ -77,9 +77,9 @@ class CourseQueryServiceTest {
         verify(repository).findCourses();
     }
 
+    @Test
     @Tag("TDD")
     @Tag("UnitTest")
-    @Test
     @DisplayName("Should Throw Exception When Repository Returns Null")
     void shouldThrowExceptionWhenRepositoryReturnsNull() {
         when(repository.findCourses()).thenReturn(null);
@@ -90,10 +90,10 @@ class CourseQueryServiceTest {
         verify(repository).findCourses();
     }
 
-    @Tag("TDD")
-    @Tag("UnitTest")
     @ParameterizedTest
     @MethodSource("courseFilterProvider")
+    @Tag("TDD")
+    @Tag("UnitTest")
     void shouldReturnCoursesAccordingToFilters(List<Course> courses) {
         when(repository.findCourses()).thenReturn(courses);
 
@@ -104,12 +104,12 @@ class CourseQueryServiceTest {
         verify(repository).findCourses();
     }
 
+    @Test
     @Tag("TDD")
     @Tag("UnitTest")
-    @Test
     @DisplayName("Should Return Empty List When No Course Matches Filter")
     void shouldReturnEmptyListWhenNoCourseMatchesFilter() {
-        Course course1 = new Course("ADS101", "Programação I", "08:00-10:00", 4, List.of(), 40);
+        Course course1 = new Course("ADS101", "Programação I", 4, List.of(), 40);
         course1.setName("ADS");
         course1.setShift("Noturno");
 
@@ -141,42 +141,38 @@ class CourseQueryServiceFunctionalTest {
         jpaRepository.deleteAll();
     }
 
+    @Test
     @Tag("Functional")
     @Tag("UnitTest")
-    @Test
     @DisplayName("Should Return All Offered Courses")
     void shouldReturnAllOfferedCourses() {
-
-        Course course1 = new Course("ADS101", "Programação I", "08:00-10:00", 4, List.of(), 40);
-
+        Course course1 = new Course("ADS101", "Programação I", 4, List.of(), 40);
         jpaRepository.save(course1);
 
         List<Course> result = realService.getCourses();
 
-        assertEquals("ADS101", result.getFirst().getCode());
+        assertEquals("ADS101", result.get(0).getCode());
     }
 
+    @Test
     @Tag("Functional")
     @Tag("UnitTest")
-    @Test
     @DisplayName("Should Return Empty List When No Courses")
     void shouldReturnEmptyListWhenNoCourses() {
         List<Course> result = realService.getCourses();
-
         assertTrue(result.isEmpty(), "Empty List When There's No Courses On DB");
     }
 
+    @Test
     @Tag("Functional")
     @Tag("UnitTest")
-    @Test
     @DisplayName("Should Filter Courses")
     void shouldFilterCourses() {
-
-        Course course1 = new Course("ADS101", "Programação I", "08:00-10:00", 4, List.of(), 40);
+        Course course1 = new Course("ADS101", "Programação I", 4, List.of(), 40);
         course1.setName("ADS");
         course1.setShift("Noturno");
 
-        Course course2 = new Course("ADS201", "Engenharia de Software", "14:00-16:00", 4, List.of(), 35);
+        Course course2 = new Course("ADS201", "Engenharia de Software", 4, List.of(), 35);
         course2.setName("ADS");
         course2.setShift("Noturno");
 
@@ -189,12 +185,12 @@ class CourseQueryServiceFunctionalTest {
                 c.getName().equals("ADS") && c.getShift().equals("Noturno")));
     }
 
+    @Test
     @Tag("Functional")
     @Tag("UnitTest")
-    @Test
     @DisplayName("Should Return Empty List When No Course Matches Filters")
     void shouldReturnEmptyListWhenNoCourseMatchesFilters() {
-        Course course1 = new Course("ADS101", "Programação I", "08:00-10:00", 4, List.of(), 40);
+        Course course1 = new Course("ADS101", "Programação I", 4, List.of(), 40);
         course1.setName("ADS");
         course1.setShift("Noturno");
 
